<?xml version="1.0"?>
<package>
  <name>roboticappgi</name>
  <version>1.0.0</version>
  <description>The roboticappgi`s class package</description>
  <maintainer email="renato.pacheco.r2@gmail.com">Renato Vieira</maintainer>
  <license>GPLv3</license>
  <url type="website">http://roboticadecampo.blogspot.com.br/</url>
  <author email="renato.pacheco.r2@gmail.com">Renato Vieira</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
